<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.jwhh.jim.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="Cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_reminder"
        android:title="Set Reminder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="102"
        android:title="Send as email"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_next"

        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="Next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
</menu>
